--- a/src/components/generaleComponents/navBar/navbar_style.css
+++ b/src/components/generaleComponents/navBar/navbar_style.css
@@ -15,11 +15,14 @@
     justify-content: space-between;
     align-items: center;
     column-gap: 1rem;
+    direction: rtl;
 }
 .nav__logo,
 .nav__toogle {
     color: var(--title-color);
-    font-weight: var(--font-medium);
+    font-weight: bold;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .nav__list {
@@ -31,10 +34,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: var(--small-font-size);
+    font-size: 16px;
     color: var(--title-color);
     font-weight: var(--font-medium);
     transition: .3s;
+    cursor: pointer;
 }
 
 .nav__icon,
@@ -82,7 +86,7 @@
 
     .nav__close {
         position: absolute;
-        right: 1.3rem;
+        left: 1.3rem;
         bottom: .5rem;
         font-size: 1.5rem;
         cursor: pointer;
