--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,15 @@ body {
   color: white;
   font-size: 5rem;
 }
+
+.title {
+  color: var(--title-color);
+  font-size: var(--big-font-size);
+  font-weight: 600;
+  text-align: center;
+}
+
+
+.section {
+  padding: 8rem 0 2rem;
+}
