--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,8 @@ button {
 }
 
 body {
-  background-color: var(--body-color)
+  background-color: var(--body-color);
+  direction: rtl;
 }
 
 .center {
@@ -116,5 +117,17 @@ body {
 
 
 .section {
-  padding: 6rem 0 2rem;
+  padding: 6rem 0 6rem;
+}
+
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  background: black;
+  color: white;
+  font-size: 5rem;
 }
