--- a/src/components/generaleComponents/navBar/navbar_style.css
+++ b/src/components/generaleComponents/navBar/navbar_style.css
@@ -52,7 +52,7 @@
     color: var(--title-color-dark);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1025px) {
     .header {
         top: initial;
         bottom: 0;
@@ -60,6 +60,7 @@
 
     .nav{
         height: var(--header-height);
+        padding: 0 1rem;
     }
 
     .nav__menu {
