--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@
   --text-color: hsl(var(--hue), var(--sat), 46%);
   --body-color: hsl(var(--hue), var(--sat), 98%);
   --container-color: #fff;
+  --red:#f44336;
+  --blue: #0075ff;
+  --blue-alt-color: #0d69d5;
+  --orange: #f59e0b;
+  --green: #22c55e;
+  --red: #f44336;
+  --grey: #888;
 
 
 }
@@ -92,7 +99,7 @@ button {
 }
 
 body {
-  background-color: var(--body-color);
+  background-color: var(--body-color); 
   direction: rtl;
 }
 
