--- a/src/components/pages/quran/quran.css
+++ b/src/components/pages/quran/quran.css
@@ -51,6 +51,15 @@
     background-color: transparent;
     font-size: 1.5rem;
     color: var(--grey);
+    transition: .3s;
+}
+
+.play:hover , .pause:hover , .tafsir:hover {
+    color: var(--green);
+}
+
+.active .pause {
+    color: var(--green);
 }
 
 .sorah-item {
@@ -82,6 +91,9 @@
     justify-content: space-between;
 }
 
+.ayahinfo h3 {
+    margin-bottom: 2rem;
+}
 
 .surahInfos .btns {
     display: grid;
@@ -94,6 +106,19 @@
     grid-template-columns: 50%  50% ;
     padding: 1rem;
 }
+
+
+/* .suwar_sidebar_container {
+    position: fixed;
+    bottom: 0;
+    height: calc(100vh - 5rem);
+    overflow-y: scroll;
+    width: 14rem;
+    z-index: 0;
+    padding: 5rem 0;
+    margin-top: 5rem;
+    left: -14rem;
+} */
 
 .suwar_sidebar {
     display: flex;
@@ -123,7 +148,7 @@
     align-items: center;
 }
 
-.ayat p {
+.ayaNbr {
     background-color: transparent;
     padding: .5rem 1rem ;
     display: grid;
@@ -134,6 +159,10 @@
     border-radius: 15px;
 }
 
-.active {
-    background-color: var(--blue);
+.active .ayah {
+    color: var(--green);
+}
+
+.active_sorah_link {
+    background-color: var(--green);
 }
