fixing cors by changing api and add scroll into ayah

--- a/src/components/generaleComponents/tafsir_ayah/tafsirmodal.css
+++ b/src/components/generaleComponents/tafsir_ayah/tafsirmodal.css
@@ -16,7 +16,7 @@
     padding: 2rem;
     z-index: 6;
     border-radius: 5px;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
 }
 
 .tafasir_buttons {
