--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,6 @@ body {
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background: black;
-  color: white;
+  color: var(--title-color);
   font-size: 5rem;
 }
