--- a/src/components/pages/quran/quran.css
+++ b/src/components/pages/quran/quran.css
@@ -254,3 +254,10 @@
     }
 }
 
+.laodingSp {
+    font-size: 5rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    color: var(--text-color);
+}
