--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,7 @@ body {
 
 
 .section {
-  padding: 6rem 0 6rem;
+  padding: 6rem 0 2rem;
 }
 
 
@@ -142,3 +142,8 @@ body {
 }
 
 
+@media screen and (max-width: 1024px) {
+  .title {
+    font-size: 1.5rem;
+  }
+}
