--- a/src/App.css
+++ b/src/App.css
@@ -137,13 +137,18 @@ body {
   height: 100vh;
   width: 100vw;
   color: var(--title-color);
-  font-size: 5rem;
+  font-size: 2rem;
   padding-right: 2rem;
 }
 
 
 @media screen and (max-width: 1024px) {
   .title {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 504px) {
+  .loading {
     font-size: 1.5rem;
   }
 }
